@startuml


class mundial.Partido {
- Date fecha
- Equipo local
- Equipo visitante
- Resultado resultado
+ <<Create>> Partido(Date,Equipo,Equipo,Resultado)
+ Date getFecha()
+ Equipo getLocal()
+ Equipo getVisitante()
+ Resultado getResultado()
+ void setResultado(Resultado)
+ String toString()
}


class mundial.Resultado {
- int golesLocal
- int golesVisitante
+ <<Create>> Resultado(int,int)
+ int getGolesLocal()
+ int getGolesVisitante()
+ boolean ganoLocal()
+ boolean ganoVisitante()
+ boolean empate()
+ String toString()
}


class mundial.Equipo {
- String nombre
- List<Partido> partidosJugados
+ <<Create>> Equipo(String)
+ String getNombre()
+ void setNombre(String)
+ void addPartido(Partido)
+ List<Partido> getPartidosJugados()
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}



abstract class mundial.EtapaMundial {
- String descripcionEtapa
- List<Partido> partidos
+ <<Create>> EtapaMundial(String)
+ String getDescripcionEtapa()
+ List<Partido> getPartidos()
# void agregarPartido(Partido)
# List<Partido> getPartidosInternos()
+ List<String> getResumenResultados()
+ {abstract}List<Equipo> getEquiposQueAvanzan()
+ String toString()
}



class mundial.Grupo {
+ <<Create>> Grupo(String)
+ void generarFixture(List<Equipo>,Date)
+ List<Equipo> getEquiposQueAvanzan()
}

class mundial.Llave {
+ <<Create>> Llave(String)
+ List<Equipo> getEquiposQueAvanzan()
}


class mundial.Main {
+ {static} void main(String[])
- {static} void octavosCuartosSemisFinal(List<Equipo>,Random)
- {static} void prepararLlaveConPenales(Llave,List<Equipo>,Date,Random)
- {static} void mostrarEtapa(EtapaMundial)
}

mundial.EtapaMundial <|-- mundial.Grupo
mundial.EtapaMundial <|-- mundial.Llave
mundial.EtapaMundial *-- mundial.Partido : se conforma de
mundial.Partido --- mundial.Equipo : participa de
Partido "1..1" --- "1..1" Resultado : corresponde a

@enduml